k8s/deployment-go2rtc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go2rtc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go2rtc
  template:
    metadata:
      labels:
        app: go2rtc
    spec:
      containers:
        - name: go2rtc
          image: alexxit/go2rtc:latest
          ports:
            - name: http
              containerPort: 1984
              protocol: TCP
            - name: rtsp
              containerPort: 8554
              protocol: TCP
            - name: webrtc
              containerPort: 8555
              protocol: UDP
          volumeMounts:
            - name: go2rtc-config
              mountPath: /config/go2rtc.yaml
              subPath: go2rtc.yaml
              readOnly: true
      volumes:
        - name: go2rtc-config
          configMap:
            name: camdash-go2rtc
            items:
              - key: go2rtc.yaml
                path: go2rtc.yaml
